--- a/package.json
+++ b/package.json
@@ -17,8 +17,21 @@
   "bugs": {
     "url": "https://gitlab.com/Shinobi-Systems/Shinobi/issues"
   },
+  "pkg": {
+    "assets": [
+      "libs/**/*",
+      "libs/**/**/*",
+      "libs/**/**/**/*",
+      "libs/**/**/**/**/*",
+      "languages/*",
+      "web/*",
+      "node_modules/ffmpeg-static/*",
+      "definitions/*"
+    ]
+  },
   "homepage": "https://gitlab.com/Shinobi-Systems/Shinobi#readme",
   "dependencies": {
+    "async": "^3.1.0",
     "aws-sdk": "^2.279.1",
     "backblaze-b2": "^1.0.4",
     "body-parser": "^1.18.3",
