--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "camera.js",
   "bin": "camera.js",
   "scripts": {
+    "dev": "nodemon --inspect camera.js",
     "test": "node camera.js test",
     "start": "chmod +x INSTALL/start.sh && INSTALL/start.sh"
   },
@@ -63,5 +64,10 @@
     "socket.io-client": "^2.2.0",
     "webdav-fs": "^1.11.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^1.19.1"
+  },
+  "nodemonConfig": {
+    "ignore": ["plugins/*"]
+  }
 }
