--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "webdav-fs": "^1.11.0",
-    "express-fileupload": "^1.1.6-alpha.6"
+    "express-fileupload": "^1.1.6-alpha.6",
+    "tree-kill":"1.2.2"
   },
   "devDependencies": {}
 }
