--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "socket.io-client": "^2.2.0",
     "webdav-fs": "^1.11.0",
     "express-fileupload": "^1.1.6-alpha.6",
+    "googleapis": "^39.2.0",
     "tree-kill":"1.2.2"
   },
   "devDependencies": {},
