--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "discord.js": "^11.3.2",
     "ejs": "^2.5.5",
     "express": "^4.16.4",
+    "express-fileupload": "^1.1.6-alpha.6",
     "ftp-srv": "^4.3.1",
     "http-proxy": "^1.17.0",
     "jsonfile": "^3.0.1",
@@ -34,18 +35,20 @@
     "node-onvif": "^0.1.4",
     "node-ssh": "^5.1.2",
     "nodemailer": "^4.0.1",
+    "npm": "^6.14.6",
     "pam-diff": "^1.0.0",
     "path": "^0.12.7",
+    "pg": "^8.2.2",
     "pipe2pam": "^0.6.2",
+    "pm2": "^3.0.0",
     "request": "^2.88.0",
     "sat": "^0.7.1",
     "shinobi-sound-detection": "^0.1.8",
     "smtp-server": "^3.5.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
-    "webdav-fs": "^1.11.0",
-    "express-fileupload": "^1.1.6-alpha.6",
-    "tree-kill":"1.2.2"
+    "tree-kill": "1.2.2",
+    "webdav-fs": "^1.11.0"
   },
   "devDependencies": {},
   "bin": "camera.js",
@@ -63,13 +66,12 @@
     "targets": [
       "node12"
     ],
-    "scripts": [
-    ],
+    "scripts": [],
     "assets": [
-        "definitions/*",
-        "languages/*",
-        "web/*",
-        "test/*"
+      "definitions/*",
+      "languages/*",
+      "web/*",
+      "test/*"
     ]
   }
 }
