add new packages + minor clean

--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "webdav-fs": "^1.11.0",
     "express-fileupload": "^1.1.6-alpha.6",
     "googleapis": "^39.2.0",
-    "tree-kill":"1.2.2"
+    "tree-kill":"1.2.2",
+    "unzipper":"0.10.11",
+    "node-fetch":"2.6.0"
   },
   "devDependencies": {},
   "bin": "camera.js",
