--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "discord.js": "^12.2.0",
     "ejs": "^2.5.5",
     "express": "^4.16.4",
-    "ftp-srv": "^4.3.2",
+    "shinobi-ftpd": "0.2.18",
     "http-proxy": "^1.17.0",
     "jsonfile": "^3.0.1",
     "knex": "^0.21.4",
